<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/mMsgLl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_timer"
        android:gravity="right|center_vertical"
        android:orientation="horizontal"
        android:paddingRight="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_timer_whrite" />

        <TextView
            android:id="@+id/mMsgTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textColor="@color/white"
            android:textSize="35dp"
            tools:text="60S" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mButtonLl"
        android:layout_below="@+id/mMsgLl"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="130dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/title_recognition"
            android:textSize="65dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:text="@string/deliver_detail"
            android:textColor="@color/gray_7E7E7E" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray_a2a2a2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="40dp"
            android:background="@color/gray_a2a2a2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mButtonLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mFinishDeliverTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_button_whrite"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:text="@string/finish_deliver"
            android:textSize="33dp" />

        <TextView
            android:id="@+id/mContinueDeliverTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:text="@string/continue_deliver"
            android:textColor="@color/WHITE"
            android:textSize="33dp" />
    </LinearLayout>
</RelativeLayout>