<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/mMsgLl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_timer"
        android:gravity="right|center_vertical"
        android:orientation="horizontal"
        android:paddingRight="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_timer_whrite" />

        <TextView
            android:id="@+id/mMsgTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textColor="@color/white"
            android:textSize="35dp"
            tools:text="60S" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mFinishTv"
        android:layout_below="@+id/mMsgLl"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="130dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/deliver_success"
            android:textSize="65dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:src="@drawable/icon_finish" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/deliver_detail"
            android:textColor="@color/gray_7E7E7E" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray_a2a2a2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="40dp"
            android:background="@color/gray_a2a2a2" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/msg_integral_total"
                android:textColor="@color/gray_7E7E7E"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/mIntegralTotalTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/red_f00000"
                android:textSize="35sp"
                tools:text="200" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/mFinishTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mQRCodeIv"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_button"
        android:gravity="center_horizontal"
        android:paddingTop="25dp"
        android:text="@string/delivery_completed"
        android:textColor="@color/WHITE" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="50dp"
        android:text="请登录小程序查收积分"
        android:textColor="@color/gray_7E7E7E"
        android:textSize="25dp" />

    <ImageView
        android:id="@+id/mQRCodeIv"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:layout_marginRight="35dp" />
</RelativeLayout>